Working on list page now.

--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -18,7 +18,7 @@
       <li><p>Create New List</p></li>
     </ul>
 
-    <h2>My Subscriptions</h2>
+    <h2><br/><br/>My Subscriptions</h2>
     <ul class="list">
       {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
         <li>
