Working on list page now.

--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -15,7 +15,7 @@
           <h2>x</h2>
         </li>
       {% end %}
-      <li><p>Create New List</p></li>
+      <li><p style="text-align: center">Create New List</p></li>
     </ul>
 
     <h2><br/><br/>My Subscriptions</h2>
@@ -28,7 +28,7 @@
           <h2>Unsubscribe</h2>
         </li>
       {% end %}
-      <li><p>Find More Lists</p></li>
+      <li><p style="text-align: center">Find More Lists</p></li>
     </ul>
     
   </div>
