Working on list page now.

--- a/app/views/friends.html
+++ b/app/views/friends.html
@@ -7,7 +7,7 @@
   <div class="left feed">
     <h2>Friends</h2>
     <ul class="list">
-      {% for video in [ {'img':'x', 'name':'Jessica Ahern'}, {'img':'x', 'name':'Carly Taylor'} ] %}
+      {% for friend in [ {'img':'x', 'name':'Jessica Ahern'}, {'img':'x', 'name':'Carly Taylor'} ] %}
         <li>
           <img src='{{ friend['img'] }}'/>
           <p>{{ friend['name'] }}</p>
