--- a/app/views/friends.html
+++ b/app/views/friends.html
@@ -8,7 +8,7 @@
     <h2>Friends</h2>
     <ul class="list">
       {% for friend in [ {'img':'x', 'name':'Jessica Ahern'}, {'img':'x', 'name':'Carly Taylor'} ] %}
-        <li>
+        <li class="clearfix">
           <img src='{{ friend['img'] }}'/>
           <p>{{ friend['name'] }}</p>
         </li>
