fix to view file location

--- a/app/views/_/static_base.html
+++ b/app/views/_/static_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-  {% include "_/navbar.html" %}
+  {% include "navbar.html" %}
   <div id="static-page">
     {% block content %}{% end %}
   </div>
