--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -102,6 +102,9 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #player-page .right button { float: left; margin-left: 50px; }
 #player-page table .fb_iframe_widget { margin-top: 50px; }
 
+#static-page { width: 950px; margin: 0px auto; }
+#static-page h1 { margin: 1em 75px 0; color: #FBB829; }
+
 #landing { display: table; width: 950px; margin: 0 auto; }
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
 #landing h2 { text-align: center; padding: 47px 32px 40px; font-weight: bold; font-size: 40px; color: #7FFF24; }
