--- a/app/views/_/footer.html
+++ b/app/views/_/footer.html
@@ -1,6 +1,6 @@
 <div id="footer">
   <span><a href="/about">About</a></span>
-  <span><a href="http://blog.mengomengo.com">Blog</a></span>
+  <span><a href="/blog">Blog</a></span>
   <span><a href="/contact">Contact</a></span>
   <span><a href="/copyright">Copyright</a></span>
   <span><a href="/privacy">Privacy</a></span>
