Added regx to pull out matches

--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -6,6 +6,7 @@
 
   <div class="left feed">
     <h2>My Lists</h2>
+    <p>{{ news }}</p>
     <ul class="list">
       {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
         <li>
