Almost done with first draft of news feed stuff

--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -7,7 +7,7 @@
   <div class="left feed">
     <h2>My Lists</h2>
     <ul class="list">
-      {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
+      {% for video in lists %}
         <li>
           <img src='{{ video['img'] }}'/>
           <p>{{ video['group'] }} ({{ video['order'] }})</p>
@@ -20,7 +20,7 @@
 
     <h2><br/><br/>My Subscriptions</h2>
     <ul class="list">
-      {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
+      {% for video in stalking %}
         <li>
           <img src='{{ video['img'] }}'/>
           <p>{{ video['group'] }} ({{ video['order'] }})</p>
